--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <link rel="apple-touch-icon" href="/src/assets/images/om-logo.webp" />
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
   </head>
   <body>
     <div id="root"></div>
